--- a/node/public/general.css
+++ b/node/public/general.css
@@ -1,3 +1,12 @@
+* {
+	margin: 0;
+	padding: 0;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	font-family: 'Roboto', sans-serif;
+}
+
 .input-h::-webkit-input-placeholder { -webkit-transition: opacity 0.4s; }
 .input-h:-moz-placeholder { -moz-transition: opacity 0.4s; }
 .input-h::-moz-placeholder { -moz-transition: opacity 0.4s; }
@@ -7,3 +16,73 @@
 .input-h:focus:-moz-placeholder { opacity: 0; }
 .input-h:focus::-moz-placeholder { opacity: 0; }
 .input-h:focus:-ms-input-placeholder { opacity: 0; }
+
+
+.wheel-loader {
+        position: absolute;
+        left: 50%;
+        top: 48px;
+        transform: translate(-50%, 0) rotate(0deg);
+        -webkit-transform: translate(-50%, 0);
+        width: 25px;
+        height: 25px;
+        border: 6px solid #111;
+        border-radius: 50%;
+        border-top-color: #1e1;
+        animation: wheel-spin 2s linear infinite;
+        opacity: 0;
+        transition: border-top-color 0.5s, opacity 0.4s;
+        -webkit-transition: border-top-color 0.5s, opacity 0.4s;
+        transition-delay: 0.56s;
+}
+
+@keyframes wheel-spin {
+        0% {
+                transform: translate(-50%, 0) rotate(0deg);
+                -webkit-transform: translate(-50%, 0) rotate(0deg);
+                border-top-color: #1e1;
+        }
+        33% {
+                transform: translate(-50%, 0) rotate(360deg);
+                -webkit-transform: translate(-50%, 0) rotate(360deg);
+                border-top-color: #11e;
+        }
+        67% {
+                transform: translate(-50%, 0) rotate(720deg);
+                -webkit-transform: translate(-50%, 0) rotate(720deg);
+                border-top-color: #e11;
+        }
+        100% {
+                transform: translate(-50%, 0) rotate(360deg);
+                -webkit-transform: translate(-50%, 0) rotate(1080deg);
+                border-top-color: #1e1;
+        }
+}
+
+body {
+	position: relative;
+	height: 100%;
+	overflow: hidden;
+}
+
+.scrollbox {
+	overflow: auto;
+}
+
+.scrollbox::-webkit-scrollbar {
+        background-color: #222;
+	width: 5px;
+}
+
+.scrollbox::-webkit-scrollbar-button {
+        display: none;
+}
+
+.scrollbox::-webkit-scrollbar-track {
+        background-color: #222;
+}
+
+.scrollbox::-webkit-scrollbar-thumb {
+	background-color: #040404;
+	border-radius: 5px;
+}
